Git_WGBH_QC/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>External Cases</fullName>
        <description>Process for Program</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Case</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Cases</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Info</fullName>
        </values>
        <values>
            <fullName>Closed Case</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>In Dev</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Program</fullName>
        <description>Process for Program</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Case</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Email_Notification_3__c</fullName>
        <inlineHelpText>Include a non-Salesforce user in email communication for this issue.</inlineHelpText>
        <label>Alternative Email Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>Used to identify which Campaign the query should be attached to</description>
        <inlineHelpText>Enter the Campaign which the query output should be attached to</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Topic__c</fullName>
        <inlineHelpText>Additional detail of the issue.</inlineHelpText>
        <label>Case Sub Topic</label>
        <picklist>
            <controllingField>Case_Topic__c</controllingField>
            <picklistValues>
                <fullName>89.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgement Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add In Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable/Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Captioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Information Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Rejection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Topic__c</fullName>
        <inlineHelpText>Brief explanation of the issue.</inlineHelpText>
        <label>Case Topic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts/Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Research/Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Directions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing/Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <inlineHelpText>Each individual contact is associated with a Household which lists information for the whole family.</inlineHelpText>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Alternative_Email_Notification_1__c</fullName>
        <inlineHelpText>Include another user in email communication for this issue.</inlineHelpText>
        <label>Alternative Email Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Alternative_Email_Notification_2__c</fullName>
        <inlineHelpText>Include another user in email communication for this issue.</inlineHelpText>
        <label>Alternative Email Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Completed_By__c</fullName>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Confidence__c</fullName>
        <inlineHelpText>e.g. +/- 10 hours</inlineHelpText>
        <label>Confidence (hours)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Decided_By__c</fullName>
        <label>Decided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Decided_On__c</fullName>
        <label>Decided On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Decider_Phone__c</fullName>
        <formula>Issue_Decided_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decider Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Decision_Required_By__c</fullName>
        <label>Decision Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Detail_Description__c</fullName>
        <label>Detail Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Development_Hours__c</fullName>
        <label>Est Development Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Doc_and_Deployment_Hours__c</fullName>
        <label>Est Documentation and Deployment Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Testing_Hours__c</fullName>
        <label>Est Testing Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_Total_Hours__c</fullName>
        <formula>Issue_Est_Development_Hours__c  +  Issue_Est_Testing_Hours__c  +  Issue_Est_Doc_and_Deployment_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Est_for_Analysis__c</fullName>
        <label>Est for Analysis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Issue ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Issue_Justification__c</fullName>
        <inlineHelpText>Tangible and intangible considerations, anticipated benefits</inlineHelpText>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Planned_Release__c</fullName>
        <label>Planned Release (or Phase)(if Postponed)</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Requester_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_URL__c</fullName>
        <inlineHelpText>Link (URL) where issue occured.</inlineHelpText>
        <label>roundCause URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Subject__c</fullName>
        <formula>Parent.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <description>Description Name on a Program</description>
        <inlineHelpText>If the case is in reference to a program, search and select the applicable program.  One program may be selected per case.</inlineHelpText>
        <label>Program Description</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases (Program Description)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>If the case is in reference to a program, search and select the applicable program.  One program may be selected per case.</inlineHelpText>
        <label>TV/Radio Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Radio_Program__c</fullName>
        <label>Radio Program</label>
        <picklist>
            <picklistValues>
                <fullName>Jazz on WGBH (Genre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erick Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Schwartz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Fuller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Carlo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Take Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emily Rooney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Things Considered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Wait Don&apos;t Tell Me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Describes the impact of the issue.</inlineHelpText>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Category__c</fullName>
        <label>Resolution Category</label>
        <picklist>
            <picklistValues>
                <fullName>Data Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>Specific station in which the case is in reference to. WGBH should be selected for non station-specific requests.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH News Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Classical Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>confidential__c</fullName>
        <label>Confidential</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Contact Date</description>
        <inlineHelpText>Date case is opened, date of first contact.</inlineHelpText>
        <label>Contact Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>long_comments__c</fullName>
        <label>Long Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>program_code__c</fullName>
        <description>Program</description>
        <label>Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>Region</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_category__c</fullName>
        <description>Response Category</description>
        <inlineHelpText>Response Category</inlineHelpText>
        <label>Response Category</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>response_date__c</fullName>
        <description>Response Date</description>
        <inlineHelpText>Response Date</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>response_type__c</fullName>
        <description>Response Type</description>
        <inlineHelpText>Response Type</inlineHelpText>
        <label>Response Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sender__c</fullName>
        <label>Sender</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__twitterId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>solicitor__c</fullName>
        <label>Solicitor</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <description>Source</description>
        <inlineHelpText>Source</inlineHelpText>
        <label>Source</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>Staff</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>station_support__c</fullName>
        <description>Station Support</description>
        <inlineHelpText>Station Support</inlineHelpText>
        <label>Station Support</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_interactions_Id__c</fullName>
        <description>TA Interactions external Id</description>
        <externalId>true</externalId>
        <label>TA Interactions Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>technique__c</fullName>
        <label>Technique</label>
        <picklist>
            <picklistValues>
                <fullName>Call to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation sent to account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolicited Call for Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Technique to update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Strategy Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail from account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail to Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Name Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Pull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handled by Customer Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>technique_value__c</fullName>
        <label>Technique Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warn_expire_date__c</fullName>
        <description>Warn Expire Date</description>
        <inlineHelpText>Warn Expire Date</inlineHelpText>
        <label>Warn Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>warning__c</fullName>
        <label>Warning</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AMS_Becky_Levy</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Case_Topic__c</columns>
        <columns>Case_Sub_Topic__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Program__c</columns>
        <columns>Station__c</columns>
        <columns>Household__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>levy</value>
        </filters>
        <label>AMS Becky Levy</label>
    </listViews>
    <listViews>
        <fullName>AMS_Cindy_Crosby</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Topic__c</columns>
        <columns>Case_Sub_Topic__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>crosby</value>
        </filters>
        <label>AMS Cindy Crosby</label>
        <sharedTo>
            <roles>Director Audience Member Services</roles>
            <roles>Manager Audience Member Services</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Jackie_Genereau</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.TYPE</columns>
        <columns>Case_Topic__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Sub_Topic__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Program__c</columns>
        <columns>Station__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Genereau</value>
        </filters>
        <label>AMS Jackie Genereau</label>
        <sharedTo>
            <roles>Director Audience Member Services</roles>
            <roles>Manager Audience Member Services</roles>
        </sharedTo>
    </listViews>
</CustomObject>